--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,6 @@
 use_frameworks!
 target 'SlideableTabsLibrary_Tests' do
-  pod 'SlideableTabsLibrary', :path => '../'
+  pod 'SlideableTabsLibrary', :path => '../SlideableTabsLibrary'
   
   
 end
